Fix cell resizing issue and work on mobile support
This resolves #5 and #6

--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden;
+    margin: 0;
 }
 
 h2 {
@@ -24,7 +26,7 @@ dialog {
     box-shadow: 0 0 16px gray;
     border-radius: 20px;
     max-width: calc(min(90ch, 90vw));
-    max-height: 90vh;
+    max-height: 85vh;
     padding: 0;
 }
 
@@ -49,6 +51,15 @@ button#close-dialog {
     right: 15px;
 }
 
+#board {
+    width: calc(100vw - 16px);
+    max-height: calc(100vh - 128px);
+    overflow: auto;
+    margin: 0;
+    padding: 0 16px 16px 16px;
+    box-sizing: border-box;
+}
+
 table {
     margin: auto;
     border-collapse: collapse;
@@ -57,14 +68,17 @@ table {
     cursor: default;
 }
 
-thead td>div {
+#buttons, #info {
     display: flex;
+    align-items: center;
     justify-content: space-evenly;
+    font-size: 16px;
+    margin: 8px auto;
+    width: min(100%, var(--board-width));
 }
 
-thead td {
-    height: 30px;
-    font-size: 16px;
+#buttons button {
+    height: 32px;
 }
 
 .timer {
@@ -77,31 +91,39 @@ thead td {
     color: gray;
 }
 
-tbody:not(.punish-guessing) {
+table:not(.punish-guessing) {
     --shadow-red: 128;
 }
 
-tbody.autopilot {
+table.autopilot {
     --shadow-green: 128;
 }
 
-tbody.mindless {
+table.mindless {
     --shadow-blue: 128;
 }
 
-tbody {
+table {
     box-shadow: 8px 8px 8px rgba(var(--shadow-red, 0), var(--shadow-green, 0), var(--shadow-blue, 0), 0.2);
 }
 
 .tile {
     height: 36px;
     width: 36px;
+    min-height: 36px;
+    min-width: 36px;
     text-align: center;
     border: 1px solid black;
     font-size: 24px;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
     background-color: #eee;
+}
+
+.tile>div {
+    max-width: 36px;
+    max-height: 36px;
+    overflow: hidden;
 }
 
 .hidden {
